--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal blog template">
-    <title>My Blog</title>
+    <title>WilmaTheWolf's Blog</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
     <style>
         body {
@@ -79,7 +79,6 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
-        <a href="#">Contact</a>
         <a href="#">Archives</a>
     </nav>
 
