--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #333;
+            background-color: #6a498e;
             color: white;
             padding: 1rem;
             text-align: center;
