--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h2>Welcome!</h2>
                 <p><strong>Posted on:</strong> July 26, 2025</p>
                 <p>Welcome to my blog! This is a random personal project for me hope you enjoy!</p>
-                <a href="google.com">Read more</a>
+                <a href="first-post">Read more</a>
             </div>
 
             <!-- Blog Post 2 -->
