--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
     <!-- Navigation Menu -->
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Archives</a>
+        <a href="index">Home</a>
+        <a href="about">About</a>
+        <a href="archives">Archives</a>
     </nav>
 
     <!-- Main Content Area -->
@@ -110,9 +110,9 @@
             <p>Hello! I'm a passionate blogger. Welcome to my space where I share my thoughts, ideas, and experiences.</p>
             <h3>Recent Posts</h3>
             <ul>
-                <li><a href="#">Post Title 1</a></li>
-                <li><a href="#">Post Title 2</a></li>
-                <li><a href="#">Post Title 3</a></li>
+                <!--li><a href="#">Post Title 1</a></li>
+                <!--li><a href="#">Post Title 2</a></li>
+                <!--li><a href="#">Post Title 3</a></li>
                 <!-- Add more links to recent posts here -->
             </ul>
         </div>
