--- a/about.html
+++ b/about.html
@@ -14,14 +14,14 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #333;
+            background-color: #6a498e;
             color: white;
             padding: 1rem;
             text-align: center;
         }
         nav {
             text-align: center;
-            background-color: #444;
+            background-color: #6a498e;
             padding: 0.5rem;
         }
         nav a {
@@ -50,7 +50,7 @@
             line-height: 1.8;
         }
         footer {
-            background-color: #333;
+            background-color: #6a498e;
             color: white;
             padding: 1rem;
             text-align: center;
