--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <h3>About Me</h3>
-            <p>Hello! I'm a passionate blogger. Welcome to my space where I share my thoughts, ideas, and experiences.</p>
+            <p>Hello! Welcome to my space where I share my thoughts to the void that is the modern internet.</p>
             <h3>Recent Posts</h3>
             <ul>
-                <!--li><a href="#">Post Title 1</a></li>
+                <li><a href="first-post">Welcome!</a></li>
                 <!--li><a href="#">Post Title 2</a></li>
                 <!--li><a href="#">Post Title 3</a></li>
                 <!-- Add more links to recent posts here -->
