--- a/first-post.html
+++ b/first-post.html
@@ -82,7 +82,7 @@
     <!-- Header Section -->
     <header>
         <h1>Wilma The Wolf</h1>
-        <p>Sharing my thoughts and ideas with the world</p>
+        <p>Pure chaos from a random furry!</p>
     </header>
 
     <!-- Navigation Menu -->
