--- a/first-post.html
+++ b/first-post.html
@@ -113,7 +113,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <h3>About Me</h3>
-            <p>I'm a passionate blogger sharing insights and ideas on web design, technology, and creativity.</p>
+            <p>Hello! Welcome to my space where I share my thoughts to the void that is the modern internet.</p>
             <h3>Recent Posts</h3>
             <ul>
                 <li><a href="first-post">Weclome!</a></li>
