--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About page of the blog">
-    <title>About Me - My Blog</title>
+    <title>WTW:About Me</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
     <style>
         body {
