--- a/about.html
+++ b/about.html
@@ -64,16 +64,15 @@
 
     <!-- Header Section -->
     <header>
-        <h1>Welcome to My Blog</h1>
-        <p>Sharing my thoughts and ideas with the world</p>
+        <h1>Wilma The Wolf</h1>
+        <p>Pure chaos from a random furry!</p>
     </header>
 
     <!-- Navigation Menu -->
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Archives</a>
+        <a href="index">Home</a>
+        <a href="about">About</a>
+        <a href="archives">Archives</a>
     </nav>
 
     <!-- Main Content Area -->
@@ -88,13 +87,13 @@
             <p>My mission is simple: to educate, inspire, and engage. I aim to provide valuable content to my readers, no matter where they are in their journey.</p>
 
             <h3>Join the Conversation</h3>
-            <p>If you have any questions or just want to chat, feel free to reach out through the <a href="#">contact page</a>! I'd love to hear from you.</p>
+            <p>If you have any questions or just want to chat, feel free to reach out through instagram @wilmathewolf</p>
         </div>
     </div>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 My Blog. All rights reserved.</p>
+        <p>&copy; 2025 WilmaTheWolf. All rights reserved.</p>
     </footer>
 
 </body>
