--- a/first-post.html
+++ b/first-post.html
@@ -111,7 +111,7 @@
         </div>
 
         <!-- Sidebar -->
-        <!--div class="sidebar">
+        <div class="sidebar">
             <h3>About Me</h3>
             <p>Hello! Welcome to my space where I share my thoughts to the void that is the modern internet.</p>
             <h3>Recent Posts</h3>
