--- a/about.html
+++ b/about.html
@@ -79,12 +79,12 @@
     <div class="container">
         <div class="content">
             <h2>About Me</h2>
-            <p>Hello! I'm [Your Name], a passionate writer, web designer, and technology enthusiast. I created this blog to share my thoughts, experiences, and insights with the world. My journey began with a fascination for [subject/industry] and has led me to explore [specific topics related to your blog].</p>
+            <p>Hello! I'm WilmaTheWolf, an insane furry who loves to make random html projects. I created this blog cause why not.</p>
 
-            <p>When I'm not writing, you can find me [mention any hobbies, interests, or side projects you have]. I believe in the power of storytelling and hope to inspire others through my words and experiences. Whether you're here to learn about [specific topic] or just to read some thoughts on life, I welcome you to join the conversation!</p>
+            <h1>FUCK U JOY LOL<h2>
 
             <h3>My Mission</h3>
-            <p>My mission is simple: to educate, inspire, and engage. I aim to provide valuable content to my readers, no matter where they are in their journey.</p>
+            <p>My mission is simple: to yap to the void that is ther modern internet.</p>
 
             <h3>Join the Conversation</h3>
             <p>If you have any questions or just want to chat, feel free to reach out through instagram @wilmathewolf</p>
