--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal blog template">
+    <meta name="description" content="WilmaTheWolf's Blog">
     <title>WilmaTheWolf's Blog</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
     <style>
