--- a/first-post.html
+++ b/first-post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Single blog post template">
+    <meta name="description" content="WilmaTheWolf:Welcome!">
     <title>WTW:Welcome</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
     <style>
