--- a/archives.html
+++ b/archives.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Blog archives page">
+    <meta name="description" content="WilmaTheWolf:Archives">
     <title>WTW:Archives</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
     <style>
